--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,5 +28,10 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
     "vite": "^6.2.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
