--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 REACT_APP_GOOGLE_CLIENT_ID=246081054303-tpkqfprt3lumar3l2gpp2o9441186gi0.apps.googleusercontent.com.apps.googleusercontent.com
+
+VITE_API_BASE_URL=https://tfss-backend-nbwb.onrender.com
